...
        // Obst
        // =====================================================================
        SeedIngredient("Ananas", 56.0, "g", 0.5, 12.4, 0.1),
        SeedIngredient("Apfel", 52.0, "g", 0.3, 14.0, 0.2),
        SeedIngredient("Aprikose", 48.0, "g", 1.4, 9.1, 0.4),
        SeedIngredient("Aprikose, getrocknet", 241.0, "g", 3.4, 53.4, 0.5),
        SeedIngredient("Banane", 89.0, "g", 1.1, 20.0, 0.3),
        SeedIngredient("Birne", 57.0, "g", 0.4, 12.4, 0.1),
        SeedIngredient("Blaubeere", 57.0, "g", 0.7, 12.2, 0.3),
        SeedIngredient("Brombeere", 43.0, "g", 1.4, 4.9, 0.5),
        SeedIngredient("Clementine", 47.0, "g", 0.9, 10.6, 0.1),
        SeedIngredient("Cranberry, getrocknet", 308.0, "g", 0.1, 77.5, 1.4),
        SeedIngredient("Dattel, getrocknet", 282.0, "g", 2.5, 65.0, 0.4),
...
